--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,33 @@ img {
     height: auto;
 }
 
+2px;
+    }
+}
+
+@media (min-width: 780px) {
+    html {
+        font-size: 11px;
+    }
+}
+
+@media (min-width: 702px) {
+    html {
+        font-size: 10px;
+    }
+}
+
+@media (min-width: 724px) {
+    html {
+        font-size: 9px;
+    }
+}
+
+@media (max-width: 623px) {
+    html {
+        font-size: 8px;
+    }
+}
 
 /* wrapper */
 
