--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,12 +23,18 @@ h1 {
 	font-size: 40px;
 }
 
+
+h2 {
+  font-size: 40px;
+  font-weight: 400;
+}
+
 h3 {
 	font-weight: 800;
 }
 
 h4 {
-	font-weight: 400;
+	font-weight: 300;
 	font-size: 20px;
 }
 
