--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,16 +21,19 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
 	font-size: 40px;
+  color: black;
 }
 
 
 h2 {
   font-size: 40px;
-  font-weight: 800;
+  font-weight: 400;
+  color: black;
 }
 
 h3 {
 	font-weight: 800;
+  color: black;
 }
 
 h4 {
@@ -133,7 +136,6 @@ img {
 }
 
 /* wrapper */
-
 #wrapper {
 	text-align: center;
 	/*background: url(../img/main-bg-compressor.jpg) no-repeat center top; */
@@ -156,12 +158,10 @@ img {
   padding-top: 50px;
 }
 
-
-
 #wrapper h1 {
 	margin-top: 60px;
 	margin-bottom: 40px;
-	color: #fff;
+	color: black;
 	font-size: 45px;
 	font-weight: 900;
 	letter-spacing: -1px;
@@ -170,7 +170,7 @@ img {
 h2.subtitle {
 	margin-top:120px;
 	margin-bottom:100px;
-	color: #2c3e50;
+	color: black;
 	font-size: 24px;
 }
 
